--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -27,10 +27,10 @@ collections:
     fields:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "case"}
       - {label: "Bild för sociala medier", name: "image", widget: "image"}
-      - {label: "Beskrivning", name: subHeading, widget: string}
+      - {label: "Beskrivning", name: heading, widget: string}
       - {label: "Rubrik", name: heading, widget: string}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Högerspalt", name: "rightSection", widget: "list", fields: [{label: "Body", name: "body", widget: "markdown"}, {label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}
+      - {label: "Högerspalt", name: "object", widget: "list", fields: [{label: "Body", name: "body", widget: "markdown"}, {label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
   - name: "pages"
