--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,53 +19,29 @@ collections:
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
       
-  - name: "case"
-    label: "Case"
-    folder: "src/pages/kunder"
-    create: true
-    slug: "{{title}}"
-    fields:
-      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "case"}
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Bild för sociala medier", name: "image1", widget: "object", fields: [{label: Företagsbild, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}
-      - {label: "Beskrivning", name: description, widget: string}
-      - {label: "Rubrik", name: heading, widget: string}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Sammanfattning", name: "intro", widget: "object", fields: [
-  {label: "Företagsbild", name: "image2", widget: "object", fields: [{label: Företagsbild, name: image, widget: image}, {label: Alt, name: alt, widget: string}]},
-{label: "Rubrik", name: heading, widget: string},
-{label: "Description", name: "description", widget: "text"},
-{label: "Beskrivning", name: intro, widget: string},
-{label: Sammanfattning, name: plans, widget: list, required: false, fields: [
-  {label: "SVG", name: "image3", widget: "object", fields: [{label: SVG, name: image, widget: image}, {label: Alt, name: alt, widget: string}]},
-{label: "Rubrik", name: heading, widget: string},
-{label: Textruta, name: description, widget: text},
-]}
-]}
-      - {label: "Brödtext", name: "body", widget: "markdown"}
-      - {label: "Tags", name: "tags", widget: "list"}
 
 
   - name: "pages"
     label: "Pages"
     files:
-      - file: "src/pages/about/index.md"
-        label: "About"
+      - file: "src/pages/om-mig/index.md"
+        label: "Om mig"
         name: "about"
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
-      - file: "src/pages/products/index.md"
-        label: "Products Page"
-        name: "products"
-        fields:
-          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "product-page"}
-          - {label: Title, name: title, widget: string}
-          - {label: Image, name: image, widget: image}
-          - {label: Heading, name: heading, widget: string}
-          - {label: Description, name: description, widget: string}
-          - {label: Intro, name: intro, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Text, name: text, widget: text}]}]}
-          - {label: Main, name: main, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Image1, name: image1, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}, {label: Image2, name: image2, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}, {label: Image3, name: image3, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}]}
-          - {label: Testimonials, name: testimonials, widget: list, fields: [{label: Quote, name: quote, widget: string}, {label: Author, name: author, widget: string}]}
-          - {label: Full_image, name: full_image, widget: image}
+
+      # - file: "src/pages/products/index.md"
+      #   label: "Products Page"
+      #   name: "products"
+      #   fields:
+      #     - {label: "Template Key", name: "templateKey", widget: "hidden", default: "product-page"}
+      #     - {label: Title, name: title, widget: string}
+      #     - {label: Image, name: image, widget: image}
+      #     - {label: Heading, name: heading, widget: string}
+      #     - {label: Description, name: description, widget: string}
+      #     - {label: Intro, name: intro, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Text, name: text, widget: text}]}]}
+      #     - {label: Main, name: main, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Image1, name: image1, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}, {label: Image2, name: image2, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}, {label: Image3, name: image3, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}]}
+      #     - {label: Testimonials, name: testimonials, widget: list, fields: [{label: Quote, name: quote, widget: string}, {label: Author, name: author, widget: string}]}
+      #     - {label: Full_image, name: full_image, widget: image}
