--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -32,6 +32,14 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
 
+      - file: "src/pages/kontakt/index.js"
+        label: "Om mig"
+        name: "about"
+        fields:
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page"}
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
+
       # - file: "src/pages/products/index.md"
       #   label: "Products Page"
       #   name: "products"
