--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -36,7 +36,7 @@ collections:
         label: "Om mig"
         name: "about"
         fields:
-          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page"}
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "contact"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
 
