--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Austin Green",
   "repository": "https://github.com/mackil5000/nora-adin-webpage",
   "dependencies": {
+    "bootstrap": "^4.2.1",
     "bulma": "^0.7.0",
     "gatsby": "^2.0.66",
     "gatsby-image": "^2.0.23",
@@ -20,11 +21,13 @@
     "gatsby-source-filesystem": "^2.0.12",
     "gatsby-transformer-remark": "^2.1.15",
     "gatsby-transformer-sharp": "^2.1.9",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms": "^2.3.1",
     "node-sass": "^4.11.0",
     "parcel-bundler": "^1.9.4",
+    "popper": "^1.0.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.4.1",
