--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "popper": "^1.0.1",
     "popper.js": "^1.14.6",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.4.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
+    "reactstrap": "^6.5.0",
     "uuid": "^3.2.1"
   },
   "keywords": [
